# bazel-schematics

./: .gitignore  README.md  WORKSPACE  angular.json  package-lock.json  package.json  tsconfig.json
e2e/src/: app.e2e-spec.ts
projects/schematics/: package.json  tsconfig.json
projects/schematics/src/: collection.json
projects/schematics/src/bazel/: index.ts  index_spec.ts
projects/schematics/src/project/: index.ts
projects/schematics/src/project/files/: BUILD.bazel
projects/schematics/src/utils/: index.ts
projects/schematics/src/workspace/: index.ts
projects/schematics/src/workspace/files/: BUILD.bazel  WORKSPACE
src/: BUILD.bazel  index.html
src/app/: app.component.spec.ts  app.component.ts
